<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.sonarsource.java</groupId>
    <artifactId>java-checks-test-sources</artifactId>
    <version>7.36.0-SNAPSHOT</version>
  </parent>

  <artifactId>java-17</artifactId>

  <name>SonarQube Java :: Checks Test Sources :: Java 17</name>

  <properties>
    <sonar.skip>true</sonar.skip>
    <forbiddenapis.skip>true</forbiddenapis.skip>
    <skipTests>true</skipTests>
    <maven.deploy.skip>true</maven.deploy.skip>
  </properties>

  <!--
   Dependencies in this project are used to check its compilation and as binaries for 'java-checks' unit tests.
   Some of the dependency licenses are not compatible to be packaged with SonarJava and should never be.
   There are several redundant safety nets to ensure that SonarJava never embed them:
   1) Dependencies have the 'provided' scope
   2) No module depends on 'java-checks-test-sources', not even 'java-checks'
   3) Several plugins are disabled bellow to not generate jars
   -->
  <dependencies>
  </dependencies>

  <profiles>
    <profile>
      <id>analyze-tests</id>
      <properties>
        <sonar.skip>false</sonar.skip>
      </properties>
    </profile>
  </profiles>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <release>17</release>
          <source>17</source>
          <target>17</target>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <argLine>--enable-preview</argLine>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.simplify4u.plugins</groupId>
        <artifactId>sign-maven-plugin</artifactId>
        <executions>
          <execution>
            <id>sign-artifacts</id>
            <phase>none</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-jar-plugin</artifactId>
        <executions>
          <execution>
            <id>default-jar</id>
            <phase>none</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-source-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>none</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-javadoc-plugin</artifactId>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <phase>none</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <artifactId>maven-install-plugin</artifactId>
        <executions>
          <execution>
            <id>default-install</id>
            <phase>none</phase>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>com.mycila</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>src/main/java/**</exclude>
            <exclude>src/test/java/**</exclude>
          </excludes>
        </configuration>
      </plugin>
    </plugins>
  </build>

</project>
